tdf#114011 limit/truncate date, not only year

Change-Id: I479040f411fb8b5975c0aa1aa24f95c957cf80cf